--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "stylelint:fix": "stylelint css/*.css css/*.scss src/**/*.scss src/**/*.vue --fix"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.7.11",
     "@nextcloud/axios": "^1.10.0",
     "@nextcloud/dialogs": "^3.1.4",
+    "@nextcloud/initial-state": "^2.0.0",
     "@nextcloud/router": "^2.0.0",
     "@nextcloud/vue": "^5.4.0",
+    "vditor": "^3.9.4",
     "vue": "^2.7.0"
   },
   "browserslist": [
